Adding version into the manifest.
